--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <canvas id="canvas"></canvas>
 
 <script src="/twgl-full.min.js"></script>
-<script src="/m4.js"></script>
+
+<script src="/gl-matrix-min.js"></script>
 
 <script src="/engine.js"></script>
