--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <script src="/gl-matrix-min.js"></script>
 
-
+<script src="/shader.js"></script>
 <script src="/uniform.js"></script>
 
 <script src="/engine.js"></script>
