--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <script src="/gl-matrix-min.js"></script>
 
 
+<script src="/scripts/shader.js"></script>
 
 <script src="/scripts/engine.js"></script>
